4th year/SIRS/scripts/setup/rules/innerRouter.v4
*filter
# Allow all outgoing, but drop incoming and forwarding packets by default
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Boilerplate acceptance policy
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Reject anything that's fallen through to this point
## Try to be protocol-specific w/ rejection message
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
# Allow connection started bt DB
-A FORWARD -i eth1 -o eth0 -m conntrack --ctstate NEW -j ACCEPT
# Forward webserver port 27017
-A FORWARD -i eth0 -o eth1 -p tcp --syn --dport 27017 -m conntrack --ctstate NEW -j ACCEPT
# Allow connections already established
-A FORWARD -i eth0 -o eth1 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Translate outgoing requests
-A POSTROUTING -o eth0 -j MASQUERADE

# Translate requests to webserver
-A PREROUTING -i eth0 -p tcp --dport 27017 -j DNAT --to-destination 192.168.2.2
-A POSTROUTING -o eth1 -p tcp --dport 27017 -d 192.168.2.2 -j SNAT --to-source 192.168.2.1

COMMIT
